--- a/survey/index.html
+++ b/survey/index.html
@@ -65,6 +65,7 @@
       <label for="fav_color" id="fav_color"
         >Please select your favorite color:</label
       >
+      <p>blue</p>
       <input type="radio" name="Green" id="fav-color" />
     </form>
   </body>
