--- a/doc-page/index.html
+++ b/doc-page/index.html
@@ -45,9 +45,25 @@
 						href="#step_1:_do_research_and_create_a_'documentation_plan'"
 						>Step 1: Do research and create a 'Documentation Plan'</a
 					>
-					<a class="nav-link slider" href="#step_2:_structure_and_design"
+					<a
+						class="nav-link slider-selector"
+						href="#step_2:_structure_and_design"
 						>Step 2: Structure and design</a
 					>
+					<div class="slider">
+						<ul>
+							<li>
+								<a href="#schemas"
+									>Use templates or “schemas” for consistent on-page design</a
+								>
+							</li>
+							<li>
+								<a href="#simple_logical_navigation_structure"
+									>Create a simple, logical navigation structure</a
+								>
+							</li>
+						</ul>
+					</div>
 					<a class="nav-link" href="#step_3:_create_the_content"
 						>Step 3: Create the content</a
 					>
@@ -311,12 +327,6 @@
 							Related documents that might help the user
 						</li>
 					</ul>
-					<p>Here’s an example using Planio wikis:</p>
-					<img
-						scr="https://plan.io/images/blog/planio-wiki-structure.png"
-						alt="Planio support web page"
-					/>
-					<p>
 						In this template, the user knows exactly what they’re reading, gets
 						a short overview of what the document covers, and then has a table
 						of contents outlining each step so they can jump to the most
