--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -85,7 +85,7 @@
 			</div>
 			<div class="number">
 				<h2>2011</h2>
-				<p>Date of foundation</p>
+				<p>date of foundation</p>
 			</div>
 			<div class="number">
 				<h2>1000+</h2>
@@ -168,29 +168,103 @@
 			</div>
 		</div>
 
+<div class="pre-test"> <p>					But listen to rewiews from actual customers!</p></div>
+
+		<div class="testimonies" id="testimonies">
+			<div class="testimony-card">
+				<div class="testimonials-top">
+					<img
+						class="testimony-img"
+						src="https://i.postimg.cc/brKyKj2S/avatar-1606604f82180308476cb513a9f1d1bc.jpg"
+					/>
+					<p class="title">Joe Doe</p>
+				</div>
+				<p class="profile-desc"></p>
+				<p class="testimony">
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla luctus
+					ante quis tortor consequat feugiat. Aliquam quis leo molestie,
+					bibendum justo quis, elementum mi. Nam efficitur nisl ut eros
+					ultricies, dictum blandit leo finibus. Nam sed ullamcorper turpis.
+					Donec vitae urna dignissim, ornare est eget, interdum elit.
+				</p>
+			</div>
+			<div class="testimony-card">
+				<div class="testimonials-top">
+					<img
+						class="testimony-img"
+						src="https://i.postimg.cc/brKyKj2S/avatar-1606604f82180308476cb513a9f1d1bc.jpg"
+					/>
+					<p class="title">Janet Doe</p>
+				</div>
+				<p class="profile-desc">CEO of CompanyName</p>
+				<p class="testimony">
+					Praesent eleifend magna ac neque placerat pellentesque. Nunc nulla
+					quam, tristique quis mollis vitae, facilisis eu quam. In ornare, orci
+					sed vestibulum fermentum, felis ante fermentum sapien, sit amet
+					consectetur eros urna volutpat ante. Vestibulum sit amet ante sit amet
+					justo feugiat accumsan ut at lacus.
+				</p>
+			</div>
+		<div class="testimony-card">
+			<div class="testimonials-top">
+				<img
+					class="testimony-img"
+					src="https://i.postimg.cc/brKyKj2S/avatar-1606604f82180308476cb513a9f1d1bc.jpg"
+				/>
+				<p class="title">Joseph Doe</p>
+			</div>
+			<p class="profile-desc">CEO of CompanyName</p>
+			<p class="testimony">
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sit
+				amet accumsan elit. Sed eu erat tincidunt, luctus magna ac, elementum
+				nisl. Pellentesque congue sapien aliquet lorem bibendum, et rhoncus
+				sapien suscipit. Vestibulum et orci vel mi ultricies rhoncus. Nullam
+				condimentum neque felis, eu dapibus sapien finibus in.
+			</p>
+		</div>
+		<div class="testimony-card">
+			<div class="testimonials-top">
+				<img
+					class="testimony-img"
+					src="https://i.postimg.cc/brKyKj2S/avatar-1606604f82180308476cb513a9f1d1bc.jpg"
+				/>
+				<p class="title">Jeanette Doe</p>
+			</div>
+			<p class="profile-desc">CEO of CompanyName</p>
+			<p class="testimony">
+				Mauris odio nisi, dictum id felis non, mattis efficitur risus. Fusce nec
+				turpis mi. Aenean tincidunt, odio eu suscipit posuere, ex lorem
+				elementum enim, at tristique risus risus scelerisque mauris. Vestibulum
+				tempor, ante non mattis bibendum, arcu massa commodo elit, id mattis
+				neque leo ultricies metus. Phasellus rutrum mauris eget ipsum interdum
+				ultricies.
+			</p>
+		</div>
+
 		<form id="form" action="https://www.freecodecamp.com/email-submit">
 			<input type="email" id="email" name="email" placeholder="Your Email" />
 			<label for="email"></label>
 			<input id="submit" type="submit" />
 		</form>
 
-		<div class="testimonies" id="testimonies">
-			<div class="testimony-card"></div>
-			<div class="testimony-card"></div>
-			<div class="testimony-card"></div>
-			<div class="testimony-card"></div>
-		</div>
-
 		<div class="footer">
-			<div class="logo">
-				<a class="logo-link" href="index.html"><img class="logo-img" /></a>
-			</div>
-			<div class="address">
-				<p>
-					(301) 431-0367 <br />
-					9804 Riggs Rd <br />
-					Hyattsville, Maryland(MD), 20783
-				</p>
+			<div class="footer-right">
+				<div class="logo">
+					<a class="logo-link" href="index.html"
+						><img
+							class="logo-img"
+							src="https://i.postimg.cc/zBK2NB9D/free-logo-clx06f38ys-4gc4ois6o6-prev-ui.png"
+						/>
+						<p>TetraTech<br />Solutions</p></a
+					>
+				</div>
+				<div class="address">
+					<p>
+						(301) 431-0367 <br />
+						9804 Riggs Rd <br />
+						Hyattsville, Maryland(MD), 20783
+					</p>
+				</div>
 			</div>
 			<div class="socials">
 				<a href="#" class="fa fa-facebook"></a>
