landing-page done

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -168,9 +168,11 @@
 			</div>
 		</div>
 
-<div class="pre-test"> <p>					But listen to rewiews from actual customers!</p></div>
+		<div class="pre-test" id="testimonies">
+			<p>But listen to rewiews from actual customers!</p>
+		</div>
 
-		<div class="testimonies" id="testimonies">
+		<div class="testimonies">
 			<div class="testimony-card">
 				<div class="testimonials-top">
 					<img
@@ -179,7 +181,7 @@
 					/>
 					<p class="title">Joe Doe</p>
 				</div>
-				<p class="profile-desc"></p>
+				<p class="profile-desc">CEO of CompanyName</p>
 				<p class="testimony">
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla luctus
 					ante quis tortor consequat feugiat. Aliquam quis leo molestie,
@@ -205,45 +207,48 @@
 					justo feugiat accumsan ut at lacus.
 				</p>
 			</div>
-		<div class="testimony-card">
-			<div class="testimonials-top">
-				<img
-					class="testimony-img"
-					src="https://i.postimg.cc/brKyKj2S/avatar-1606604f82180308476cb513a9f1d1bc.jpg"
-				/>
-				<p class="title">Joseph Doe</p>
+			<div class="testimony-card">
+				<div class="testimonials-top">
+					<img
+						class="testimony-img"
+						src="https://i.postimg.cc/brKyKj2S/avatar-1606604f82180308476cb513a9f1d1bc.jpg"
+					/>
+					<p class="title">Joseph Doe</p>
+				</div>
+				<p class="profile-desc">CEO of CompanyName</p>
+				<p class="testimony">
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sit
+					amet accumsan elit. Sed eu erat tincidunt, luctus magna ac, elementum
+					nisl. Pellentesque congue sapien aliquet lorem bibendum, et rhoncus
+					sapien suscipit. Vestibulum et orci vel mi ultricies rhoncus. Nullam
+					condimentum neque felis, eu dapibus sapien finibus in.
+				</p>
 			</div>
-			<p class="profile-desc">CEO of CompanyName</p>
-			<p class="testimony">
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sit
-				amet accumsan elit. Sed eu erat tincidunt, luctus magna ac, elementum
-				nisl. Pellentesque congue sapien aliquet lorem bibendum, et rhoncus
-				sapien suscipit. Vestibulum et orci vel mi ultricies rhoncus. Nullam
-				condimentum neque felis, eu dapibus sapien finibus in.
-			</p>
-		</div>
-		<div class="testimony-card">
-			<div class="testimonials-top">
-				<img
-					class="testimony-img"
-					src="https://i.postimg.cc/brKyKj2S/avatar-1606604f82180308476cb513a9f1d1bc.jpg"
-				/>
-				<p class="title">Jeanette Doe</p>
+			<div class="testimony-card">
+				<div class="testimonials-top">
+					<img
+						class="testimony-img"
+						src="https://i.postimg.cc/brKyKj2S/avatar-1606604f82180308476cb513a9f1d1bc.jpg"
+					/>
+					<p class="title">Jeanette Doe</p>
+				</div>
+				<p class="profile-desc">CEO of CompanyName</p>
+				<p class="testimony">
+					Mauris odio nisi, dictum id felis non, mattis efficitur risus. Fusce
+					nec turpis mi. Aenean tincidunt, odio eu suscipit posuere, ex lorem
+					elementum enim, at tristique risus risus scelerisque mauris.
+					Vestibulum tempor, ante non mattis bibendum, arcu massa commodo elit,
+					id mattis neque leo ultricies metus. Phasellus rutrum mauris eget
+					ipsum interdum ultricies.
+				</p>
 			</div>
-			<p class="profile-desc">CEO of CompanyName</p>
-			<p class="testimony">
-				Mauris odio nisi, dictum id felis non, mattis efficitur risus. Fusce nec
-				turpis mi. Aenean tincidunt, odio eu suscipit posuere, ex lorem
-				elementum enim, at tristique risus risus scelerisque mauris. Vestibulum
-				tempor, ante non mattis bibendum, arcu massa commodo elit, id mattis
-				neque leo ultricies metus. Phasellus rutrum mauris eget ipsum interdum
-				ultricies.
-			</p>
 		</div>
 
 		<form id="form" action="https://www.freecodecamp.com/email-submit">
-			<input type="email" id="email" name="email" placeholder="Your Email" />
-			<label for="email"></label>
+			<div class="newsletter">
+				<input type="email" id="email" name="email" placeholder="Your Email" />
+				<label for="email">Subscribe to our newsletter</label>
+			</div>
 			<input id="submit" type="submit" />
 		</form>
 
