--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -22,20 +22,21 @@
 				<a class="logo-link" href="index.html"
 					><img
 						class="logo-img"
+						id="header-img"
 						src="https://i.postimg.cc/zBK2NB9D/free-logo-clx06f38ys-4gc4ois6o6-prev-ui.png"
 					/>
 					<p>TetraTech<br />Solutions</p></a
 				>
 			</div>
 			<nav id="nav-bar">
-				<a class="nav-link" href="#">About</a>
+				<a class="nav-link" href="#hero">About</a>
 				<a class="nav-link" href="#features">Features</a>
 				<a class="nav-link" href="#product">Pricing</a>
 				<a class="nav-link" href="#testimonies">Testimonies</a>
 			</nav>
 		</header>
 		<div class="hero-bg">
-			<div class="hero" id="hero">
+			<div class="hero" id="#hero">
 				<div class="hero-left">
 					<h1>TetraTech Solutions</h1>
 					<p class="hero-decription">
@@ -64,6 +65,7 @@
 				</p>
 			</div>
 			<iframe
+				id="video"
 				width="1280"
 				height="300"
 				src="https://www.youtube.com/embed/BggrpKfqh1c"
