portfolio certification done, some fixes

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -24,6 +24,7 @@
 						class="logo-img"
 						id="header-img"
 						src="https://i.postimg.cc/zBK2NB9D/free-logo-clx06f38ys-4gc4ois6o6-prev-ui.png"
+						alt="TerraTech logo"
 					/>
 					<p>TetraTech<br />Solutions</p></a
 				>
@@ -50,6 +51,7 @@
 				<img
 					id="hero-img"
 					src="https://i.postimg.cc/XJf2Ctpm/pngwing-com.png"
+					alt="Drawing of man working"
 				/>
 			</div>
 		</div>
@@ -180,6 +182,7 @@
 					<img
 						class="testimony-img"
 						src="https://i.postimg.cc/brKyKj2S/avatar-1606604f82180308476cb513a9f1d1bc.jpg"
+						alt="Profile picture"
 					/>
 					<p class="title">Joe Doe</p>
 				</div>
@@ -197,6 +200,7 @@
 					<img
 						class="testimony-img"
 						src="https://i.postimg.cc/brKyKj2S/avatar-1606604f82180308476cb513a9f1d1bc.jpg"
+						alt="Profile picture"
 					/>
 					<p class="title">Janet Doe</p>
 				</div>
@@ -214,6 +218,7 @@
 					<img
 						class="testimony-img"
 						src="https://i.postimg.cc/brKyKj2S/avatar-1606604f82180308476cb513a9f1d1bc.jpg"
+						alt="Profile picture"
 					/>
 					<p class="title">Joseph Doe</p>
 				</div>
@@ -231,6 +236,7 @@
 					<img
 						class="testimony-img"
 						src="https://i.postimg.cc/brKyKj2S/avatar-1606604f82180308476cb513a9f1d1bc.jpg"
+						alt="Profile picture"
 					/>
 					<p class="title">Jeanette Doe</p>
 				</div>
@@ -261,6 +267,7 @@
 						><img
 							class="logo-img"
 							src="https://i.postimg.cc/zBK2NB9D/free-logo-clx06f38ys-4gc4ois6o6-prev-ui.png"
+							alt="TerraTech Logo"
 						/>
 						<p>TetraTech<br />Solutions</p></a
 					>
